--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,24 @@
             "App\\": "src/"
         }
     },
+    "require": {
+        "php": "^8.0.8",
+        "vlucas/phpdotenv": "^5.4",
+        "phpdocumentor/phpdocumentor": "^3.1"
+    },
     "require-dev": {
-        "overtrue/phplint": "^4.0"
+        "overtrue/phplint": "^4.0",
+        "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "document": [
+            "./vendor/bin/phpdoc run -d /src -t /docs"
+        ],
+        "lint": [
+            "./vendor/bin/phplint"
+        ],
+        "test": [
+            "./vendor/bin/phpunit --testdox"
+        ]
     }
 }
