Pushes Github action changes to commit

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,3 +38,6 @@ jobs:
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
           args: --config=./.php-cs-fixer-dist.php -v
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Apply php-cs-fixer changes
