--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,4 +53,6 @@ jobs:
       - name: Psalm
         uses: docker://vimeo/psalm-github-actions
         with:
+          composer_require_dev: true
+          composer_ignore_platform_reqs: true
           security_analysis: true
