--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,6 +47,7 @@ jobs:
   lint:
     name: Linting (PHP CS Fixer)
     runs-on: ubuntu-latest
+    needs: [static_code_analysis]
     steps:
       - uses: actions/checkout@v2
       - name: PHP-CS-Fixer
