--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,12 +37,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Psalm
-        uses: docker://vimeo/psalm-github-actions
+      - name: Use composer cache if possible
+        uses: actions/cache@v2
         with:
-          composer_require_dev: true
-          composer_ignore_platform_reqs: true
-          security_analysis: true
+          path: /tmp/composer-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+
+      - name: Install Composer
+        uses: php-actions/composer@v6
+        with:
+          php_version: 8.0.8
+          php_extensions: pdo_pgsql soap gd zip
+
+      - name: Run static code
+        run: |
+          composer analysis
 
   lint:
     name: Linting (PHP CS Fixer)
