--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
             "./vendor/bin/php-cs-fixer --config=./.php-cs-fixer-dist.php -v"
         ],
         "test": [
-            "export APP_ENV=test && ./vendor/bin/phpunit --testdox -c ./phpunit.xml.dist"
+            "./vendor/bin/phpunit --testdox -c ./phpunit.xml.dist"
         ]
     }
 }
