Only commit PHP files on lint changes

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,3 +67,4 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Apply php-cs-fixer changes
+          file_pattern: src/*.php tests/*.php *.php
