--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require": {
         "php": "^8.0.8",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "bramus/router": "~1.6"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.4",
